2005-01-09  Per Bothner  <per@bothner.com>

	* ClassType.java (writeExternal): Simplify. Non-existing classes
	are now handled specialy in LitTable.

2005-01-05  Per Bothner  <per@bothner.com>

	* Type.java (array_type): New field.
	* ArrayType.java (make(Type)): Use array_type of argument.
	(make(String)): New non-public static method.
	* Type.java (getType): Use ArrayType.make(String).
	(signatureToType): Use ArrayType.make(Type).

	* Type.java (hashCode): New method.

	* ClassType.java (getDeclaredMethod): Compare argument types
	by comparing signatures, not only by identity.

2005-01-02  Per Bothner  <per@bothner.com>

	* ObjectType.java: Change "select" (preprocessor) syntax.

2004-12-30  Per Bothner  <per@bothner.com>

	* ClassFileInput.java (readAttribute): Link in scopes read from
	LocalVariableTable table into Scope tree structure.

	* Variable.java (shouldEmit): Trivial performance fix

2004-12-29  Per Bothner  <per@bothner.com>

	* Type.java (setReflectClass): New method.

2004-12-25  Per Bothner  <per@bothner.com>

	* SourceDebugExtAttr.java (addFile): Clear curLineIndex "cache".

2004-12-24  Per Bothner  <per@bothner.com>

	* Method.java (compile_linenumber): Remove no-longer used method.

	* ClassType.java (setSourceFile): Fix off-by-one error.

	* ClassType.java (setSourceFile): Don't include directories in
	SourceFile attribute, following class file spec.

2004-12-23  Per Bothner  <per@bothner.com>

	* ClassFileInput.java (readAttribute): Fix NullPointerException if
	end unset in parameter_scope, when reading "LocalVariableTable".

	* SourceDebugExtAttr.java: New class, extends Attribute.
	* Makefile.am: Update accordingly.
	* ClassFileInput.java (readAttribute): Handle "SourceDebugExtension".
	* ClassType.java (sourceDbgExt): New field.
	(setStratum): New method, allocates SourceDebugExtAttr.
	(setSourceFile): Add new file to sourceDbgExt.
	* CodeAttr.java (sourceDbgExt): New field.
	(putLineNumber): If sourceDbgExt, have it do fixLine.